Reviewed by Dan Bernstein.

Bug 53760 - JSC fails to build with TOT Clang
https://bugs.webkit.org/show_bug.cgi?id=53760

Fix -Woverloaded-virtual warnings. This is also a 6% speedup on the v8 raytrace
benchmark; it is nothing-to-noise on everything else.

JavaScriptCore:

* API/JSCallbackObject.h: Remove pointlessly overloaded method.
* API/JSCallbackObjectFunctions.h: Ditto.
* runtime/Arguments.cpp:
(JSC::Arguments::put): Change signature to match the base class. This implementation
was no longer being called by anyone. This wasn't noticed because it is merely an
optimization of the base class' implementation.
* runtime/Arguments.h: Ditto.

JavaScriptGlue:

* UserObjectImp.cpp:
(UserObjectImp::toPrimitive): Use PreferredPrimitiveType instead of JSType to
match the base class.
* UserObjectImp.h:



Canonical link: https://commits.webkit.org/68431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78428 268f45cc-cd09-0410-ab3c-d52691b4dbfc