Source/JavaScriptGlue/UserObjectImp.cpp
@@ -169,7 +169,7 @@ JSUserObject* UserObjectImp::GetJSUserObject() const
     return fJSUserObject;
 }
 
-JSValue UserObjectImp::toPrimitive(ExecState *exec, JSType) const
+JSValue UserObjectImp::toPrimitive(ExecState *exec, PreferredPrimitiveType) const
 {
     JSValue result = jsUndefined();
     JSUserObject* jsObjPtr = KJSValueToJSObject(toObject(exec), exec);
